--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
 	"name" : "dataslang/dataslang-php",
    	"require": {
 		"guzzlehttp/guzzle": "~6.0"
-	}
+	},
+	"autoload": {
+        "psr-4": { "\\": "/" }
+    }
 }
