--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
 		"guzzlehttp/guzzle": "~6.0"
 	},
 	"autoload": {
-		"psr-4": { "\\": "/" }
-    }
+		"psr-4": {
+			"Dataslang\\": "src/Dataslang/"
+		}
+	}
 }
